<resources>
    <string name="app_name">爱上音乐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_native_music">本地音乐</string>
    <string name="action_settings">本地音乐扫描</string>
    <string name="ic_title_settings">设置</string>
    <string name="ic_menu_sleeptime">睡眠定时</string>
    <string name="ic_menu_setting">软件设置</string>
    <string name="nav_internet_music">网络音乐</string>
    <string name="nav_search_music">扫描音乐</string>
    <string name="ic_menu_exit">退出</string>
</resources>
