<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_native_music"
            android:icon="@mipmap/ic_queue_music_grey600_48dp"
            android:title="@string/nav_native_music" />
    </group>

    <item android:title="@string/ic_title_settings">
        <menu>
            <item
                android:id="@+id/nav_sleeptime"
                android:icon="@mipmap/ic_snooze_grey600_48dp"
                android:title="@string/ic_menu_sleeptime" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_settings_grey600_48dp"
                android:title="@string/ic_menu_setting" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@mipmap/ic_exit_to_app_grey600_48dp"
                android:title="@string/ic_menu_exit" />
        </menu>
    </item>

</menu>